# Asunder

./: .gitignore  README.md  com.martinalebachew.asunderdecryptor.json.example.json  manifest.json  martinalebachew.asunderdecryptor.json.example  package-lock.json  package.json  tsconfig.json
Asunder Decryptor/: CMakeLists.txt
Asunder Decryptor/src/: decryptor.cpp
Asunder Extension/: README.md
Asunder Extension/src/: background.ts
Asunder-Decryptor/: CMakeLists.txt
Asunder-Decryptor/src/: browser_io.cpp  browser_io.hpp  data_buffer.cpp  decryptor.cpp  download.cpp  pdf.hpp
Asunder-Extension/: .eslintrc.json  package-lock.json  package.json
Asunder-Extension/src/: background.ts
Decryptor/src/: decryptor.cpp
Extension/public/: manifest.json
Scripts/: compile.py
Scripts/shared/: prerequisites.py
Scripts/utils/: pdfnetc.py  vcpkg.py
decryptor/: CMakeLists.txt
decryptor/src/: data_buffer.hpp  decryptor.cpp  download.hpp  pdf.cpp  pdf.hpp
extension/: package-lock.json  package.json
extension/src/: background.ts
extension/src/content_scripts/: bookshelf.ts
public/: manifest.json
public/donwloader/: donwloader.html  donwloader.js
scripts/: build_extension.py  compile.py  compile_decryptor.py  crypto.py  install_asunder.py  pack.py  unpack.py
scripts/shared/: installation.py  prerequisites.py  vcpkg.py
scripts/utils/: archives.py  crypto.py  download.py  fs.py  git.py  logging.py  node.py  pdfnetc.py  prerequisites.py  shell.py  updates.py  vcpkg.py
src/: background.ts
src/content_scripts/: bookshelf.ts
